[tool.poetry]
name = "queueunderflow"
version = "0.1.0"
description = ""
authors = ["Basel Ismail Fawaz Hadi Ismail Fawaz <134176929+bfawwaz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
